fix broken contact form on small screens

--- a/styles/workshop.css
+++ b/styles/workshop.css
@@ -53,7 +53,7 @@
 }
 
 .form {
-  max-width: calc(var(--xl) * 2);
+  max-width: 100%;
   .aff {
     margin-bottom: var(--margin);
   }
